Fix spacing in footer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,61 +14,75 @@ body {
 footer {
   background-color: #3E497A;
   color: #F1D00A;
-  font-size: 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 2rem 2rem;
+  padding: 2rem 0rem;
 }
+
 .footer-contact {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
 }
+
 .footer-logo {
   margin-bottom: 1rem;
 }
+
 .contact-data-container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
 
-}
-.contact-data a{
+.contact-data a {
   font-size: 1rem;
-  margin-left: 0.5rem;
+  margin-left: 0.8rem;
 }
-.contact-data a:link, a:visited, a:active {
-  text-decoration:none;
+
+.contact-data a:link,
+a:visited,
+a:active {
+  text-decoration: none;
   color: #F1D00A;
 }
+
 .contact-data a:hover {
   color: #F0F0F0;
 }
+
 .footer-menu-options {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  padding: 0 4rem;
 }
+
 .footer-menu-options li {
   padding: 0.3rem;
 }
+
 .footer-menu-options li:hover {
   color: #F0F0F0;
   cursor: pointer;
   font-weight: 500;
 }
-.social-links  i {
+
+.social-links i {
   color: #F1D00A;
   cursor: pointer;
 }
+
 .social-icons-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 0.5rem;
 }
+
 .social-icon-circle {
   margin: 0.3rem;
   width: 25px;
@@ -80,9 +94,11 @@ footer {
   align-items: center;
   padding: 0.05rem;
 }
+
 .social-icon-circle:hover {
   border: 1px solid #F0F0F0;
 }
+
 .social-icon-circle i:hover {
   color: #F0F0F0;
 }
